--- a/Device Interface Manager/App.xaml
+++ b/Device Interface Manager/App.xaml
@@ -2,8 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:viewModel="clr-namespace:Device_Interface_Manager.MVVM.ViewModel"
-             xmlns:view="clr-namespace:Device_Interface_Manager.MVVM.View"
-             StartupUri="/MVVM/View/MainWindow.xaml">
+             xmlns:view="clr-namespace:Device_Interface_Manager.MVVM.View">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -50,6 +49,12 @@
             <FontFamily x:Key="PMDG_NG3_DU_B">pack://application:,,,/Fonts/#PMDG_NGXu_DU_B</FontFamily>
             <FontFamily x:Key="PMDG_NG3_DU_C">pack://application:,,,/Fonts/#PMDG_NGXu_DU_C</FontFamily>
             <FontFamily x:Key="BOEING">pack://application:,,,/Fonts/#BOEING-style</FontFamily>
+            <Style TargetType="ContentControl">
+                <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+            </Style>
+            <Style TargetType="Button" BasedOn="{StaticResource MahApps.Styles.Button}">
+                <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+            </Style>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
