--- a/Device Interface Manager/MVVM/View/HomeENETView.xaml
+++ b/Device Interface Manager/MVVM/View/HomeENETView.xaml
@@ -93,7 +93,7 @@
             <DataGrid
                     ItemsSource="{Binding Connections}"
                     d:ItemsSource="{d:SampleData ItemCount=11}"
-                    IsEnabled="{Binding IsENETEnabled}"
+                    IsHitTestVisible="{Binding IsENETEnabled}"
                     DockPanel.Dock="Top"
                     Margin="0,10,0,40"
                     AutoGenerateColumns="False"
