--- a/Device Interface Manager/MVVM/View/HomeUSBView.xaml
+++ b/Device Interface Manager/MVVM/View/HomeUSBView.xaml
@@ -120,6 +120,7 @@
 
                 <Button
                     Command="{Binding StartUSBCommand}"
+                    d:Content="Start"
                     FontSize="23"
                     Width="150"
                     Cursor="Hand"
@@ -166,7 +167,7 @@
                 <DataGrid
                     ItemsSource="{Binding Connections}"
                     d:ItemsSource="{d:SampleData ItemCount=3}"
-                    IsEnabled="{Binding IsUSBEnabled}"
+                    IsHitTestVisible="{Binding IsUSBEnabled}"
                     DockPanel.Dock="Top"
                     Margin="0,10,0,40"
                     AutoGenerateColumns="False"
