--- a/Device Interface Manager/MVVM/View/OutputCreatorView.xaml
+++ b/Device Interface Manager/MVVM/View/OutputCreatorView.xaml
@@ -78,9 +78,6 @@
                     mah:TextBoxHelper.ClearTextButton="True"
                     SelectedItem="{Binding Output, UpdateSourceTrigger=PropertyChanged}">
                     <i:Interaction.Triggers>
-                        <i:EventTrigger EventName="SelectionChanged">
-                            <i:InvokeCommandAction Command="{Binding ComboBoxSlectionChangedCommand}" PassEventArgsToCommand="True"/>
-                        </i:EventTrigger>
                         <i:EventTrigger EventName="MouseMove">
                             <i:InvokeCommandAction Command="{Binding MouseMoveComboBoxCommand}" PassEventArgsToCommand="True"/>
                         </i:EventTrigger>
@@ -241,34 +238,6 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="2*"/>
                 </Grid.ColumnDefinitions>
-                <TextBlock Text="Comparison Value" Foreground="White" VerticalAlignment="Center"/>
-                <TextBox
-                    Grid.Column="1"
-                    Text="{Binding ComparisonValue, TargetNullValue='', UpdateSourceTrigger=PropertyChanged}"
-                    mah:TextBoxHelper.Watermark="Comparison Value"
-                    mah:TextBoxHelper.ClearTextButton="True">
-                </TextBox>
-                <Grid.Style>
-                    <Style TargetType="Grid">
-                        <Setter Property="Visibility" Value="Collapsed"/>
-                        <Style.Triggers>
-                            <MultiDataTrigger>
-                                <Setter Property="Visibility" Value="Visible"/>
-                                <MultiDataTrigger.Conditions>
-                                    <Condition Binding="{Binding IsComparisonValueEnabled}" Value="True"/>
-                                    <Condition Binding="{Binding OutputType}" Value="LED"/>
-                                </MultiDataTrigger.Conditions>
-                            </MultiDataTrigger>
-                        </Style.Triggers>
-                    </Style>
-                </Grid.Style>
-            </Grid>
-
-            <Grid Margin="0,20,0,0">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="2*"/>
-                </Grid.ColumnDefinitions>
                 <TextBlock Text="Invert" Foreground="White" VerticalAlignment="Center"/>
                 <CheckBox
                     Grid.Column="1"
@@ -284,7 +253,7 @@
                             <MultiDataTrigger>
                                 <Setter Property="Visibility" Value="Visible"/>
                                 <MultiDataTrigger.Conditions>
-                                    <Condition Binding="{Binding IsComparisonValueEnabled}" Value="True"/>
+                                    <Condition Binding="{Binding IsComparisonEnabled}" Value="True"/>
                                     <Condition Binding="{Binding OutputType}" Value="LED"/>
                                 </MultiDataTrigger.Conditions>
                             </MultiDataTrigger>
@@ -293,7 +262,103 @@
                 </Grid.Style>
             </Grid>
 
-            <Border d:Visibility="Visible"  Margin="0,40,0,0" BorderBrush="SlateGray" BorderThickness="2" CornerRadius="5">
+            <Border d:Visibility="Visible" Margin="0,20,0,0" BorderBrush="SlateGray" BorderThickness="2" CornerRadius="5">
+                <StackPanel Margin="20,0,20,20">
+
+                    <TextBlock Margin="0,10,0,0" Text="Comparison" FontWeight="Bold" FontSize="18" Foreground="White" HorizontalAlignment="Center"/>
+
+                    <Grid Margin="0,20,0,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="0.5*"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="Operator" Foreground="White" VerticalAlignment="Center"/>
+                        <ComboBox
+                            Grid.Row="1"
+                            Grid.Column="1"
+                            mah:TextBoxHelper.ClearTextButton="True"
+                            HorizontalAlignment="Left"
+                            FontWeight="Bold"
+                            FontSize="20"
+                            Width="80"
+                            HorizontalContentAlignment="Center"
+                            SelectedItem="{Binding Operator, UpdateSourceTrigger=PropertyChanged}"
+                            ItemsSource="{Binding Operators}">
+                            <ComboBox.ItemContainerStyle>
+                                <Style TargetType="ComboBoxItem" BasedOn="{StaticResource MahApps.Styles.ComboBoxItem}">
+                                    <Setter Property="HorizontalContentAlignment" Value="Center" />
+                                </Style>
+                            </ComboBox.ItemContainerStyle>
+                        </ComboBox>
+                    </Grid>
+
+                    <Grid Margin="0,20,0,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="2*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="Comparison Value" Foreground="White" VerticalAlignment="Center"/>
+                        <TextBox
+                            Grid.Column="1"
+                            Text="{Binding ComparisonValue, TargetNullValue='', UpdateSourceTrigger=PropertyChanged}"
+                            mah:TextBoxHelper.Watermark="Comparison Value"
+                            mah:TextBoxHelper.ClearTextButton="True">
+                        </TextBox>
+                    </Grid>
+
+                    <Grid Margin="0,20,0,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="2*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="True Value" Foreground="White" VerticalAlignment="Center"/>
+                        <TextBox
+                            Grid.Column="1"
+                            Text="{Binding TrueValue, TargetNullValue='', UpdateSourceTrigger=PropertyChanged}"
+                            mah:TextBoxHelper.Watermark="True Value"
+                            mah:TextBoxHelper.ClearTextButton="True">
+                        </TextBox>
+                    </Grid>
+
+                    <Grid Margin="0,20,0,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="2*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="False Value" Foreground="White" VerticalAlignment="Center"/>
+                        <TextBox
+                            Grid.Column="1"
+                            Text="{Binding FalseValue, TargetNullValue='', UpdateSourceTrigger=PropertyChanged}"
+                            mah:TextBoxHelper.Watermark="False Value"
+                            mah:TextBoxHelper.ClearTextButton="True">
+                        </TextBox>
+                    </Grid>
+
+                </StackPanel>
+                <Border.Style>
+                    <Style TargetType="Border">
+                        <Setter Property="Visibility" Value="Collapsed"/>
+                        <Style.Triggers>
+                            <MultiDataTrigger>
+                                <Setter Property="Visibility" Value="Visible"/>
+                                <MultiDataTrigger.Conditions>
+                                    <Condition Binding="{Binding DataType}" Value="MSFS/SimConnect/LVar"/>
+                                    <Condition Binding="{Binding OutputType}" Value="LED"/>
+                                </MultiDataTrigger.Conditions>
+                            </MultiDataTrigger>
+                            <MultiDataTrigger>
+                                <Setter Property="Visibility" Value="Visible"/>
+                                <MultiDataTrigger.Conditions>
+                                    <Condition Binding="{Binding IsComparisonEnabled}" Value="True"/>
+                                    <Condition Binding="{Binding OutputType}" Value="LED"/>
+                                </MultiDataTrigger.Conditions>
+                            </MultiDataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </Border.Style>
+            </Border>
+
+            <Border d:Visibility="Visible" Margin="0,20,0,0" BorderBrush="SlateGray" BorderThickness="2" CornerRadius="5">
                 <StackPanel Margin="20,0,20,20">
 
                     <TextBlock Margin="0,10,0,0" Text="Display" FontWeight="Bold" FontSize="18" Foreground="White" HorizontalAlignment="Center"/>
@@ -313,7 +378,7 @@
                         </CheckBox>
                     </Grid>
 
-                    <Grid d:Visibility="Visible" Margin="0,20,0,0">
+                    <Grid Margin="0,20,0,0">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="2*"/>
@@ -329,7 +394,7 @@
                         </ComboBox>
                     </Grid>
 
-                    <Grid d:Visibility="Visible" Margin="0,20,0,0">
+                    <Grid Margin="0,20,0,0">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="2*"/>
@@ -343,7 +408,7 @@
                         </ComboBox>
                     </Grid>
 
-                    <Grid d:Visibility="Visible" Margin="0,20,0,0" Height="70">
+                    <Grid Margin="0,20,0,0" Height="70">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="2*"/>
@@ -354,7 +419,7 @@
                         </Grid.RowDefinitions>
                         <TextBlock Text="Digit" Foreground="White" VerticalAlignment="Top" Height="18"/>
                         <TextBlock Grid.Row="1" Text="Decimal Point" Foreground="White" VerticalAlignment="Top" Height="18"/>
-                        <ListView 
+                        <ListView
                             Grid.Column="1"
                             Grid.RowSpan="2"
                             ItemsSource="{Binding Digits}"
@@ -367,7 +432,7 @@
                             </ListView.ItemsPanel>
                             <ListView.ItemTemplate>
                                 <DataTemplate>
-                                    <StackPanel Orientation="Vertical" Margin="-5,0,9.25,0" Width="18">
+                                    <StackPanel Orientation="Vertical" Margin="0,0,10,0" Width="18">
                                         <CheckBox
                                         IsChecked="{Binding IsDigitChecked}"
                                         mah:CheckBoxHelper.CheckGlyphForegroundChecked="White"
@@ -384,6 +449,7 @@
                             </ListView.ItemTemplate>
                             <ListView.ItemContainerStyle>
                                 <Style TargetType="ListViewItem" BasedOn="{StaticResource MahApps.Styles.ListBoxItem}">
+                                    <Setter Property="Padding" Value="0"/>
                                     <Setter Property="IsTabStop" Value="False"/>
                                     <Setter Property="Background" Value="Transparent"/>
                                     <Setter Property="mah:ItemHelper.SelectedBackgroundBrush" Value="Transparent"/>
