--- a/Device Interface Manager/MVVM/View/SettingsView.xaml
+++ b/Device Interface Manager/MVVM/View/SettingsView.xaml
@@ -71,18 +71,26 @@
 
         <Grid Margin="0,200,0,0">
             <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="500"/>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+            <ListBox ItemsSource="{Binding Source={x:Static Application.Current}, Path=LogMessages}" Margin="10" d:ItemsSource="{d:SampleData ItemCount=5}" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding}" TextWrapping="Wrap" />
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+
+            <StackPanel Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center">
                 <StackPanel.Resources>
                     <Style TargetType="ToolTip">
                         <Setter Property="Background" Value="Black"/>
                         <Setter Property="Foreground" Value="White"/>
                     </Style>
                 </StackPanel.Resources>
-
                 <mah:ToggleSwitch
                     IsOn="{Binding AutoHide}"
                     Header="Autohide to tray on startup"
@@ -106,7 +114,7 @@
             </StackPanel>
 
             <Border
-                Grid.Column="1"
+                Grid.Column="2"
                 BorderThickness="5"
                 BorderBrush="Firebrick"
                 CornerRadius="10"
