--- a/Device Interface Manager/Theme/MenuButtonTheme.xaml
+++ b/Device Interface Manager/Theme/MenuButtonTheme.xaml
@@ -26,6 +26,7 @@
             <Setter Property="BorderThickness" Value="0"/>
             <Setter Property="IsTabStop" Value="False"/>
             <Setter Property="Cursor" Value="Hand"/>
+            <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         </Style.Setters>
 
         <Style.Triggers>
